added grid layouts to the footer

--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,12 @@ footer{
 
 }
 .main-container2{
-   justify-content: center;
+    
+    justify-items: center;
+}
+
    
    
-}
-.main-container-sub{
-    flex-wrap: wrap;
-}
+   
+
+
