--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,18 @@ body{
     background:rgb(219, 213, 213);
     height:5px;
 }
-   
-   
+
+/* ALBUM PAGE CSS */
+
+   .table{
+       color: var(--spotify-white);
+       font-family: var(--main-font);
+
+   }
+   th{
+    align-items: flex-start;
+   }
+   .smallh6{
+       font-weight:200;
+   }
   
