--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,900;1,900&family=Raleway:ital,wght@0,900;1,900&family=Roboto+Mono:ital,wght@1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;1,300&display=swap');
 :root {
     --main-font: 'Montserrat', sans-serif;
     --spotify-green: #1DB954;
@@ -210,6 +211,35 @@ body{
     background:rgb(219, 213, 213);
     height:5px;
 }
-   
-   
+   /* starting point of jumbotron */
+   .jumbo-img {
+    max-height: 50vh;
+    object-fit: cover;
+}
+.jumbo-icon{
+    position: absolute;
+    top: 45%;
+    left: 3%;
+    color: rgb(84, 84, 240);
+}
+.jumbo-title{
+    position: absolute;
+    font-family: 'Raleway', sans-serif;
+    font-size: 58px;
+    top: 65%;
+    left: 3%;
+    color: var(--spotify-white);
+    
+    
+}
+ .jumbo-parag{
+     position: absolute;
+     top: 88%;
+     left: 2%;
+     font-family: 'Rubik', sans-serif; }  
+   .jumbo-img{
+     opacity: 0.5;
+ }
+ /* end of jumbotron */
+
   
