--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,13 @@ h4 ,.podcast-title{
     color:var(--spotify-grey);
 }
 .images{
-width:120px;
-height: 110px;
+width:130px;
+height: 120px;
 object-fit: cover;
 margin: 15px;
+padding-left: 10px;
 box-shadow: cadetblue;
-border-radius: 10%;
+border-radius: 15%;
 }
 #round-img{
     border-radius: 50%;
