--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,13 @@ body{
     position: absolute;
     top: 45%;
     left: 3%;
-    color: rgb(84, 84, 240);
+    color: rgb(101, 101, 233);
+    
+   
+}
+span{
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--spotify-white);
 }
 .jumbo-title{
     position: absolute;
