--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,9 @@
 body {
   background-color: rgba(46, 0, 2, 0.603);
 }
-h1 {
+h3 {
   font-family: var(--main-font);
+  color: var(--spotify-white);
 }
 
 .arrowButton {
@@ -22,33 +23,42 @@ h1 {
   color: white;
   background-color: rgba(180, 176, 176, 0.493);
 }
-img {
-  width: 80px;
-  display: inline-flex;
-}
-span {
-  font-family: var(--main-font);
-  text-align: center;
-  width: 80%;
-  background: rgba(150, 150, 150, 0.459);
-  /* opacity: 0.2; */
+
+.good-morning-container-fluid,
+body {
+  background: rgb(64, 8, 7);
+  background: linear-gradient(
+    180deg,
+    rgba(64, 8, 7, 1) 0%,
+    rgba(18, 18, 18, 1) 100%
+  );
 }
 
-.firstCard {
-  display: inline-flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 19%;
-
-  /* border: 1px solid black; */
-  margin: 5px;
-}
-/* .container {
+.good-morning-main-container {
+  display: flex;
   flex-wrap: wrap;
-} */
+}
 
-.loginpage {
-  align-items: center;
-  text-align: center;
-  color: #eaeaea;
+.good-morning-card-container {
+  display: flex;
+  max-width: 495px;
+  height: 80px;
+  margin: 16px 16px 16px 0;
+}
+
+.good-morning-card-container img {
+  width: 80px;
+  height: 80px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.good-morning-card-container span {
+  width: 100%;
+  background-color: #8a8a8a25;
+  color: white;
+  padding: 33px 16px;
+  font-size: 0.75rem;
+  font-weight: 600;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
