--- a/styles.css
+++ b/styles.css
@@ -409,7 +409,7 @@ span{
 
 .good-morning-card-container {
     display: flex;
-    max-width: 495px;
+    min-width: 300px;
     height: 80px;
     margin: 16px 16px 16px 0;
 }
