--- a/styles.css
+++ b/styles.css
@@ -301,6 +301,11 @@ span{
     font-weight: 100;
     font-size: smaller;
 }
+
+table > thead > tr {
+    border-bottom: 1px solid var(--spotify-grey);
+}
+
  /* ARTIST PAGE CSS ENDS  HERE */
 
 /* ALBUM PAGE CSS */
@@ -440,3 +445,31 @@ span{
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
+
+/* start of album jumbotron styles */
+
+.album-jumbotron-don {
+    background: rgb(166,59,135);
+    background: linear-gradient(180deg, rgba(166,59,135,1) 0%, rgba(88,29,72,1) 55%);
+    color: white;
+}
+
+.album-jumbotron-don h1 {
+    margin: 0 0 16.1px 0;
+    font-weight: 700;
+}
+
+.bohemian-album-cover {
+    height: 192px;
+    width: 192px;
+    box-shadow: 3px 3px 20px rgb(65, 65, 65), -3px -3px 20px rgb(65, 65, 65);
+}
+
+.artist-profile-pic {
+    max-width: 25px;
+    border-radius: 50%;
+}
+
+
+
+/* end of album jumbotron styles */
